# institution_checker

./: .gitignore  DEBUG_RUN.md  README.md  demo_presentation.ipynb  institution_check_results.xlsx  institution_check_results_purdue_only.xlsx  main.py  pipeline_notebook_1.ipynb  pre_llm_survey_validation.ipynb  pyproject.toml  requirements.txt  results_monitor_notebook.ipynb  search_results_comparison.ipynb  tune_filtering.py
data/: results.csv  results.xlsx  results_partial.csv  results_purdue_trial_set_checked.xlsx  results_quick.csv
src/institution_checker/: __init__.py  config.py  llm_processor.py  main.py  nb_utils.py  search.py
src/institution_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: benchmark_nobel.ipynb  benchmark_search.py  debug_test_notebook.ipynb  optimize_runner.py  quick_runner_notebook.ipynb  test_output.txt  test_pre_llm_survey.py
