[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "institution-checker"
version = "0.1.0"
description = "Searches public web sources and uses an LLM to verify institutional affiliations."
readme = "README.md"
authors = [
    { name = "Institution Checker Maintainers" }
]
license = { text = "Proprietary" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "httpx",
    "pandas",
    "pyppeteer",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
institution-checker = "institution_checker.main:main"

[tool.setuptools.packages.find]
where = ["src"]

